# Road-to-Space-Systems-Security

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
01-bare-metal/: README.md
01-bare-metal/bme280-i2c/: README.md  bme280.py  main.py
02-rtos/freertos-multitask/: README.md
03-embedded-linux/: README.md
04-space-systems/: README.md
assets/: README.md
config/: FreeRTOSConfig.h
src/: main.c
